# django-project-template

./: .gitignore  Makefile  README.md  docker-compose.yml  example.env  manage.py  setup.cfg  setup.py
project_name/: wsgi.py
project_name/apps/users/migrations/: 0001_initial.py
project_name/core/: urls.py
project_name/settings/: __init__.py  base.py  dev.py  production.py  staging.py
requirements/: base.txt
src/project_name/: __about__.py  wsgi.py
src/project_name/apps/users/: admin.py  forms.py  models.py
src/project_name/apps/users/fixtures/: dev.yaml
src/project_name/apps/users/migrations/: 0001_initial.py
src/project_name/runner/: __init__.py  __main__.py  decorators.py
src/project_name/runner/commands/: django.py
src/project_name/settings/: __init__.py  base.py  dev.py  production.py  staging.py  test.py
tests/: conftest.py  runtests.sh
tests/project_name/users/: factories.py  test_users.py
