[bumpversion]
current_version = 0.0.0
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:src/{{project_name}}/__about__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
description-file = README.md

[flake8]
ignore = N8,D4,D1,D2,D3,C9,E731
exclude =
	build, docs, dist,
	setup.py,
	*/migrations,
	src/{{project_name}}/settings,
    src/{{project_name}}/__about__.py,
	test*.py

[tool:pytest]
testpaths = tests
python_files = test*.py
addopts = --tb=native -p no:doctest
norecursedirs = bin dist docs htmlcov utils .* {args}
